APIs/googleapis.com/baremetalsolution/v2/python-client/README.md
# openapi-client
Provides ways to manage Bare Metal Solution hardware installed in a regional extension located near a Google Cloud data center.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://baremetalsolution.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://baremetalsolution.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ProjectsApi(api_client)
    instance = 'instance_example' # str | Required. Name of the instance.
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)
    detach_lun_request = openapi_client.DetachLunRequest() # DetachLunRequest |  (optional)

    try:
        api_response = api_instance.baremetalsolution_projects_locations_instances_detach_lun(instance, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type, detach_lun_request=detach_lun_request)
        print("The response of ProjectsApi->baremetalsolution_projects_locations_instances_detach_lun:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling ProjectsApi->baremetalsolution_projects_locations_instances_detach_lun: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://baremetalsolution.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_detach_lun**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_detach_lun) | **POST** /v2/{instance}:detachLun | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_disable_interactive_serial_console**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_disable_interactive_serial_console) | **POST** /v2/{name}:disableInteractiveSerialConsole | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_enable_interactive_serial_console**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_enable_interactive_serial_console) | **POST** /v2/{name}:enableInteractiveSerialConsole | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_list) | **GET** /v2/{parent}/instances | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_load_auth_info**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_load_auth_info) | **GET** /v2/{name}:loadAuthInfo | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_reset**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_reset) | **POST** /v2/{name}:reset | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_start**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_start) | **POST** /v2/{name}:start | 
*ProjectsApi* | [**baremetalsolution_projects_locations_instances_stop**](docs/ProjectsApi.md#baremetalsolution_projects_locations_instances_stop) | **POST** /v2/{name}:stop | 
*ProjectsApi* | [**baremetalsolution_projects_locations_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_list) | **GET** /v2/{name}/locations | 
*ProjectsApi* | [**baremetalsolution_projects_locations_networks_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_networks_list) | **GET** /v2/{parent}/networks | 
*ProjectsApi* | [**baremetalsolution_projects_locations_networks_list_network_usage**](docs/ProjectsApi.md#baremetalsolution_projects_locations_networks_list_network_usage) | **GET** /v2/{location}/networks:listNetworkUsage | 
*ProjectsApi* | [**baremetalsolution_projects_locations_nfs_shares_create**](docs/ProjectsApi.md#baremetalsolution_projects_locations_nfs_shares_create) | **POST** /v2/{parent}/nfsShares | 
*ProjectsApi* | [**baremetalsolution_projects_locations_nfs_shares_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_nfs_shares_list) | **GET** /v2/{parent}/nfsShares | 
*ProjectsApi* | [**baremetalsolution_projects_locations_os_images_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_os_images_list) | **GET** /v2/{parent}/osImages | 
*ProjectsApi* | [**baremetalsolution_projects_locations_provisioning_configs_create**](docs/ProjectsApi.md#baremetalsolution_projects_locations_provisioning_configs_create) | **POST** /v2/{parent}/provisioningConfigs | 
*ProjectsApi* | [**baremetalsolution_projects_locations_provisioning_configs_submit**](docs/ProjectsApi.md#baremetalsolution_projects_locations_provisioning_configs_submit) | **POST** /v2/{parent}/provisioningConfigs:submit | 
*ProjectsApi* | [**baremetalsolution_projects_locations_provisioning_quotas_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_provisioning_quotas_list) | **GET** /v2/{parent}/provisioningQuotas | 
*ProjectsApi* | [**baremetalsolution_projects_locations_ssh_keys_create**](docs/ProjectsApi.md#baremetalsolution_projects_locations_ssh_keys_create) | **POST** /v2/{parent}/sshKeys | 
*ProjectsApi* | [**baremetalsolution_projects_locations_ssh_keys_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_ssh_keys_list) | **GET** /v2/{parent}/sshKeys | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_list) | **GET** /v2/{parent}/volumes | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_luns_evict**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_luns_evict) | **POST** /v2/{name}:evict | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_luns_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_luns_list) | **GET** /v2/{parent}/luns | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_patch**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_patch) | **PATCH** /v2/{name} | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_rename**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_rename) | **POST** /v2/{name}:rename | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_resize**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_resize) | **POST** /v2/{volume}:resize | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_snapshots_create**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_snapshots_create) | **POST** /v2/{parent}/snapshots | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_snapshots_delete**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_snapshots_delete) | **DELETE** /v2/{name} | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_snapshots_get**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_snapshots_get) | **GET** /v2/{name} | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_snapshots_list**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_snapshots_list) | **GET** /v2/{parent}/snapshots | 
*ProjectsApi* | [**baremetalsolution_projects_locations_volumes_snapshots_restore_volume_snapshot**](docs/ProjectsApi.md#baremetalsolution_projects_locations_volumes_snapshots_restore_volume_snapshot) | **POST** /v2/{volumeSnapshot}:restoreVolumeSnapshot | 


## Documentation For Models

 - [AllowedClient](docs/AllowedClient.md)
 - [DetachLunRequest](docs/DetachLunRequest.md)
 - [GoogleCloudBaremetalsolutionV2LogicalInterface](docs/GoogleCloudBaremetalsolutionV2LogicalInterface.md)
 - [GoogleCloudBaremetalsolutionV2ServerNetworkTemplateLogicalInterface](docs/GoogleCloudBaremetalsolutionV2ServerNetworkTemplateLogicalInterface.md)
 - [Instance](docs/Instance.md)
 - [InstanceConfig](docs/InstanceConfig.md)
 - [InstanceQuota](docs/InstanceQuota.md)
 - [IntakeVlanAttachment](docs/IntakeVlanAttachment.md)
 - [ListInstancesResponse](docs/ListInstancesResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListLunsResponse](docs/ListLunsResponse.md)
 - [ListNetworkUsageResponse](docs/ListNetworkUsageResponse.md)
 - [ListNetworksResponse](docs/ListNetworksResponse.md)
 - [ListNfsSharesResponse](docs/ListNfsSharesResponse.md)
 - [ListOSImagesResponse](docs/ListOSImagesResponse.md)
 - [ListProvisioningQuotasResponse](docs/ListProvisioningQuotasResponse.md)
 - [ListSSHKeysResponse](docs/ListSSHKeysResponse.md)
 - [ListVolumeSnapshotsResponse](docs/ListVolumeSnapshotsResponse.md)
 - [ListVolumesResponse](docs/ListVolumesResponse.md)
 - [LoadInstanceAuthInfoResponse](docs/LoadInstanceAuthInfoResponse.md)
 - [Location](docs/Location.md)
 - [LogicalNetworkInterface](docs/LogicalNetworkInterface.md)
 - [Lun](docs/Lun.md)
 - [LunRange](docs/LunRange.md)
 - [Network](docs/Network.md)
 - [NetworkAddress](docs/NetworkAddress.md)
 - [NetworkAddressReservation](docs/NetworkAddressReservation.md)
 - [NetworkConfig](docs/NetworkConfig.md)
 - [NetworkMountPoint](docs/NetworkMountPoint.md)
 - [NetworkUsage](docs/NetworkUsage.md)
 - [NfsExport](docs/NfsExport.md)
 - [NfsShare](docs/NfsShare.md)
 - [OSImage](docs/OSImage.md)
 - [Operation](docs/Operation.md)
 - [ProvisioningConfig](docs/ProvisioningConfig.md)
 - [ProvisioningQuota](docs/ProvisioningQuota.md)
 - [QosPolicy](docs/QosPolicy.md)
 - [RenameInstanceRequest](docs/RenameInstanceRequest.md)
 - [RenameNetworkRequest](docs/RenameNetworkRequest.md)
 - [RenameNfsShareRequest](docs/RenameNfsShareRequest.md)
 - [RenameVolumeRequest](docs/RenameVolumeRequest.md)
 - [ResizeVolumeRequest](docs/ResizeVolumeRequest.md)
 - [SSHKey](docs/SSHKey.md)
 - [ServerNetworkTemplate](docs/ServerNetworkTemplate.md)
 - [SnapshotReservationDetail](docs/SnapshotReservationDetail.md)
 - [Status](docs/Status.md)
 - [SubmitProvisioningConfigRequest](docs/SubmitProvisioningConfigRequest.md)
 - [SubmitProvisioningConfigResponse](docs/SubmitProvisioningConfigResponse.md)
 - [UserAccount](docs/UserAccount.md)
 - [VRF](docs/VRF.md)
 - [VlanAttachment](docs/VlanAttachment.md)
 - [Volume](docs/Volume.md)
 - [VolumeConfig](docs/VolumeConfig.md)
 - [VolumeSnapshot](docs/VolumeSnapshot.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/cloud-platform**: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.


## Author




